[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-keeperhub"
version = "0.1.0"
description = "LangChain toolkit for reliable Web3 execution via KeeperHub"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Devendra" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.3",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/devendra116/langchain-keeperhub"
Documentation = "https://docs.keeperhub.com"
Repository = "https://github.com/devendra116/langchain-keeperhub"
