[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-keeperhub"
version = "0.5.0"
description = "LangChain toolkit for reliable Web3 execution via KeeperHub"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agents", "ethereum", "langchain", "web3"]
authors = [
    { name = "Devendra" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=1.3,<2",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
workflows = [
    "langchain-mcp-adapters>=0.2.2,<0.3",
]
examples = [
    "langchain>=1,<2",
    "langchain-google-genai>=4,<5",
    "langchain-openai>=1,<2",
    "openai",
    "langgraph>=1.1.10,<2",
    "python-dotenv",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/devendra116/langchain_keeperhub"
Documentation = "https://docs.keeperhub.com"
Repository = "https://github.com/devendra116/langchain_keeperhub"
